<resources>
    <string name="app_name">IStrategiesApp</string>
    <string name="istrategies">IStrategies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="agregar_cuenta">Agregar cuenta</string>
    <string name="aun_no_tienes_cuentas_asosiadas">Aun no tienes cuentas asosiadas</string>
</resources>