<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="50dp"
            android:alpha="0.2"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/primary_dark"
            app:popupTheme="@style/Widget.AppCompat.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CUENTAS"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/txtToolbar" />

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginBottom="100dp">

            <TextView
                android:id="@+id/eq_empty_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginBottom="250dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/aun_no_tienes_cuentas_asosiadas"
                android:textColor="@color/black"
                android:visibility="gone"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/loading_wheel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginEnd="180dp"
                android:layout_marginBottom="260dp"
                android:gravity="center"
                android:indeterminate="true"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvAccount"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesion"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_cuenta"
            app:layout_constraintBottom_toTopOf="@+id/btnLogout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>